✨ feat(product): update API to use POST for retrieving products with filtering; add FilterDTO and FilterTagsDTO definitions
